--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="col-12 content-col">
               <h1 class="site-title" a>¡Enciende tu luz interior con Asana!</h1>
               <p class="site-title-desc">Asana Yoga Studio es un espacio sagrado dedicado a la exploración y el fortalecimiento de tu bienestar interior.</p>
-              <a class="banner-btn" href="#">Únete al estudio</a>
+              <button class="banner-btn" href="#">Únete al estudio</button>
             </div>
           </div>
         </div>
@@ -80,7 +80,7 @@
                         </g>
                       </g>
                       </svg>
-              <a href="#"><h3 class="service-title">Medita</h3></a>
+              <h3 class="service-title">Medita</h3>
               <p class="service-desc">En Asana te enseñamos a que conectes contigo mismo, a que disfrutes de tu ser.</p>
           </div>
           <div class="col-lg-4">
@@ -103,7 +103,7 @@
               </g>
             </g>
             </svg>
-            <a href="#"><h3 class="service-title">Elige tu rutina favorita</h3></a>
+            <h3 class="service-title">Elige tu rutina favorita</h3>
             <p class="service-desc">El plan de entrenamiento es totalmente personalizado.</p>
           </div>
           <div class="col-lg-4">
@@ -136,7 +136,7 @@
               </g>
             </g>
             </svg>
-            <a href="#"><h3 class="service-title">Disfruta del estilo de vida</h3></a>
+            <h3 class="service-title">Disfruta del estilo de vida</h3>
             <p class="service-desc">En Asana no solo aprendes de yoga, aprendes a llevar tu vida de una forma diferente, con armonía.</p>
           </div>
         </div>
@@ -147,7 +147,6 @@
           <div class="col-lg-6 best-class-club-desc">
             <div class="row">
               <div class="col-lg-4">
-                
               </div>
               <div class="col-lg-8 detail-col-club">
                 <h2 class="club-section-title">¿Por qué elegir Asana?</h2>
@@ -161,8 +160,8 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6 best-class-club-img">
-
+          <div class="col-lg-6 best-class-club-img" >
+            <img src="img/the-best-class-yoga.jpg" alt="Mujer haciendo yoga en un salón">
           </div>
         </div>
       </div>
@@ -206,7 +205,7 @@
                       </g>
                     </svg>
                   </div>
-                  <a href="#"><h3 class="advantages-detail-title">Cuerpo y Mente</h3></a>
+                  <h3 class="advantages-detail-title">Cuerpo y Mente</h3>
                   <p class="advantages-detail-desc">Al practicar yoga, desarrollas una mayor conciencia corporal y mental, lo que te permite vivir en armonía contigo mismo.</p>
                 </div> 
               </div>              
@@ -231,7 +230,7 @@
                       </g>
                     </svg>
                   </div>
-                  <a href="#"><h3 class="advantages-detail-title">Beneficios para la Salud</h3></a>
+                  <h3 class="advantages-detail-title">Beneficios para la Salud</h3>
                   <p class="advantages-detail-desc">A través de posturas y ejercicios de respiración, fortaleces tus músculos, mejoras tu flexibilidad y promueves la circulación sanguínea.</p>
                 </div>
               </div>              
@@ -264,7 +263,7 @@
                       </g>
                     </svg>
                   </div>
-                  <a href="#"><h3 class="advantages-detail-title">Relajación y Renovación</h3></a>
+                  <h3 class="advantages-detail-title">Relajación y Renovación</h3>
                   <p class="advantages-detail-desc">Con prácticas de relajación y meditación, puedes liberar el estrés acumulado y renovar tu energía.</p>
                 </div>
               </div>              
@@ -305,7 +304,7 @@
                       </g>
                     </svg>
                   </div>
-                  <a href="#"><h3 class="advantages-detail-title">Energía Real</h3></a>
+                  <h3 class="advantages-detail-title">Energía Real</h3>
                   <p class="advantages-detail-desc">A través de prácticas de yoga, aprenderás a canalizar tu energía interna de manera más eficaz, lo que te dará una sensación de vitalidad y poder.</p>
                 </div>
               </div>              
@@ -346,7 +345,7 @@
                       </g>
                     </svg>
                   </div>
-                  <a href="#"><h3 class="advantages-detail-title">Renovando tu Mente</h3></a>
+                  <h3 class="advantages-detail-title">Renovando tu Mente</h3>
                   <p class="advantages-detail-desc">A medida que te sumerges en la meditación y la concentración, puedes liberarte de patrones de pensamiento negativos y encontrar claridad mental.</p>
                 </div>
               </div>              
@@ -371,7 +370,7 @@
                       </g>
                     </svg>
                   </div>
-                  <a href="#"><h3 class="advantages-detail-title">Meditación</h3></a>
+                  <h3 class="advantages-detail-title">Meditación</h3>
                   <p class="advantages-detail-desc">En Asana, te ofrecemos clases de meditación que te guiarán en un viaje de autoexploración y paz interior.</p>
                 </div>
               </div>              
@@ -392,28 +391,28 @@
               <div class="yogaPlace-img">
                 <img src="img/kundalini-yoga.jpg" class="yogaPlace-in-img" alt="">
               </div>              
-              <a href="#"><h3 class="yogaPlace-title">Yoga Básica</h3></a>
+              <h3 class="yogaPlace-title">Yoga Básica</h3>
               <p class="yogaPlace-desc">Perfecta para aquellos que son nuevos en el yoga o desean establecer una base sólida en su práctica.</p>
             </div>
             <div class="col-lg-3">
               <div class="yogaPlace-img">
                 <img src="img/basic-yoga.jpg" class="yogaPlace-in-img" alt="">
               </div>
-              <a href="#"><h3 class="yogaPlace-title">Yoga Vinyasa</h3></a>
+              <h3 class="yogaPlace-title">Yoga Vinyasa</h3>
               <p class="yogaPlace-desc">Experimentarás un flujo dinámico de posturas que están sincronizadas con la respiración.</p>
             </div>
             <div class="col-lg-3">
               <div class="yogaPlace-img">
                 <img src="img/iyengar-yoga.jpg" class="yogaPlace-in-img" alt="">
               </div>
-              <a href="#"><h3 class="yogaPlace-title">Yoga Restaurativa</h3></a>
+              <h3 class="yogaPlace-title">Yoga Restaurativa</h3>
               <p class="yogaPlace-desc">Ideal para reducir el estrés y recuperar la energía.</p>
             </div>
             <div class="col-lg-3">
               <div class="yogaPlace-img">
                 <img src="img/advanced-yoga-poses.jpg" class="yogaPlace-in-img" alt="">
               </div>
-              <a href="#"><h3 class="yogaPlace-title">Yoga Kundalini</h3></a>
+              <h3 class="yogaPlace-title">Yoga Kundalini</h3>
               <p class="yogaPlace-desc">Explorarás el poder de tu energía interna y aprenderás a equilibrar tus chakras.</p>
             </div>
           </div>
@@ -435,37 +434,36 @@
                   <div class="row">
                     <div class="col-lg-6 appointment-form-col-left">
                       <label for="Nombre">Nombre(s) *</label>                          
-                      <input type="text" class="form-control appointment-form-input" placeholder="ej. Mariana" required="">
+                      <input type="text" id="Nombre" class="form-control appointment-form-input" placeholder="ej. Mariana" aria-required="true">
                     </div>
                     <div class="col-lg-6 appointment-form-col-right">      
                       <label for="Apellidos">Apellido(s) *</label>                       
-                      <input type="text" class="form-control appointment-form-input" placeholder="ej. López García" required="">
+                      <input type="text" id="Apellidos" class="form-control appointment-form-input" placeholder="ej. López García" aria-required="true">
                     </div>
                     <div class="col-lg-6 appointment-form-col-left">
-                      <label for="Apellidos">Día *</label>     
-                      <input type="date" class="form-control appointment-form-input data-input" required="">
+                      <label for="Dia">Día *</label>     
+                      <input type="date" id="Dia" class="form-control appointment-form-input data-input" aria-required="true">
                     </div>
                     <div class="col-lg-6  appointment-form-col-right">
-                      <label for="Apellidos">Clase *</label>     
-                      <select name="gender" class="form-control appointment-form-input" >
-                        <option value="choose-class">Elige tu clase favorita</option>
-                        <option value="class-1">Básica</option>
-                        <option value="class-2">Vinyasa</option>
-                        <option value="class-3">Restaurativa</option>
-                        <option value="class-3">Kundalini</option>
+                      <label for="Clase">Clase *</label>     
+                      <select name="gender" id="Clase" class="form-control appointment-form-input" aria-required="true" aria-label="Selecciona la clase que quieres tomar">
+                        <option value="Básica">Básica</option>
+                        <option value="Vinyasa">Vinyasa</option>
+                        <option value="Restaurativa">Restaurativa</option>
+                        <option value="Kundalini">Kundalini</option>
                       </select>
                      </div>
                     <div class="col-lg-6 appointment-form-col-left">
                       <label for="Telefono">Teléfono *</label>     
-                      <input type="tel" class="form-control appointment-form-input" placeholder="ej. 3121065456" required="" value="" size="10" maxlength="10">
+                      <input type="tel" id="Telefono" class="form-control appointment-form-input" placeholder="ej. 3121065456" aria-required="true" value="" size="10" maxlength="10">
                     </div>
                     <div class="col-lg-6 appointment-form-col-right">
-                      <label for="Telefono">Correo electrónico</label>  
-                      <input type="email" class="form-control appointment-form-input" placeholder="ej. mar@email.com" required="">
+                      <label for="Correo">Correo electrónico</label>  
+                      <input type="email" id="Correo" class="form-control appointment-form-input" placeholder="ej. mar@email.com" aria-required="true">
                     </div>
                     <div class="col-12 appointment-form-col-left">
-                      <label for="Telefono">Mensaje</label>  
-                      <textarea class="form-control appointment-form-text" id="exampleFormControlTextarea1" rows="3" placeholder="Si tienes dudas o comentarios, escríbelas aquí"></textarea>
+                      <label for="Mensaje">Mensaje</label>  
+                      <textarea class="form-control appointment-form-text" id="Mensaje" rows="3" placeholder="Si tienes dudas o comentarios, escríbelas aquí" aria-required="false"></textarea>
                     </div>
                     <div class="col-12 appointment-form-col-right">
                       <button type="submit"  class="appointment-form-btn"  value="">Agendar</button>                              
@@ -477,23 +475,24 @@
           <div class="col-lg-6 open-time">
             <div class="weekdays">
               <h3 class="open-time-title">Lunes a Viernes</h3>
+              <h2 class="open-time-course">Meditación</h2>
               <p class="open-time-clock">6:00 am - 7:00 am</p>
-              <p class="open-time-course">Meditación</p>
+              <h2 class="open-time-course">Yoga Básica</h2>
               <p class="open-time-clock">7:00 am - 8:00 am</p>
-              <p class="open-time-course">Yoga Básica</p>
+              <h2 class="open-time-course">Yoga Vinyasa</h2>
               <p class="open-time-clock">8:00 am - 9:00 am</p>
-              <p class="open-time-course">Yoga Vinyasa</p>
+              <h2 class="open-time-course">Yoga Restaurativa</h2>
               <p class="open-time-clock">9:00 am - 10:00 am</p>
-              <p class="open-time-course">Yoga Restaurativa</p>
+              <h2 class="open-time-course">Yoga Kundalini</h2>
               <p class="open-time-clock">10:00 am - 11:00 am</p>
-              <p class="open-time-course">Yoga Kundalini</p>
             </div>
             <div class="weekends">
               <h3 class="open-time-title">Sábado</h3>
+              <h2 class="open-time-course">Meditación</h2>
               <p class="open-time-clock">8:00 am - 9:00 am</p>
-              <p class="open-time-course">Meditación</p>
+              <h2 class="open-time-course">Yoga Básica</h2>
               <p class="open-time-clock">9:00 am - 10:00 am</p>
-              <p class="open-time-course">Yoga Básica</p>
+              
             </div>
           </div>
         </div>
@@ -511,28 +510,28 @@
               <div class="trainer-img">
                 <img src="img/fig-nelson.jpg" class="trainer-in-img" alt="">
               </div>              
-              <a href="#"><h3 class="trainer-title">Paola González</h3></a>
+              <h3 class="trainer-title">Paola González</h3>
               <p class="trainer-desc">Meditación y Yoga Básica</p>
             </div>
             <div class="col-lg-3">
               <div class="trainer-img">
                 <img src="img/jason-response.jpg" class="trainer-in-img" alt="">
               </div>
-              <a href="#"><h3 class="trainer-title">Luciana Sevilla</h3></a>
+              <h3 class="trainer-title">Luciana Sevilla</h3>
               <p class="trainer-desc">Yoga Vinyasa</p>
             </div>
             <div class="col-lg-3">
               <div class="trainer-img">
                 <img src="img/eric-widget.jpg" class="trainer-in-img" alt="">
               </div>
-              <a href="#"><h3 class="trainer-title">Eliana Meza</h3></a>
+              <h3 class="trainer-title">Eliana Meza</h3>
               <p class="trainer-desc">Yoga Restaurativa</p>
             </div>
             <div class="col-lg-3">
               <div class="trainer-img">
                 <img src="img/lance-begrol.jpg" class="trainer-in-img" alt="">
               </div>
-              <a href="#"><h3 class="trainer-title">Valeria Macías</h3></a>
+              <h3 class="trainer-title">Valeria Macías</h3>
               <p class="trainer-desc">Yoga Kundalini</p>
             </div>
           </div>
@@ -562,10 +561,9 @@
                 <p>&copy; 2023 Derechos reservados. Creada por <a href="https://www.webdomus.net/" class="created-by">Web Domus Italia y María José Ávila Amezcua</a></p>
               </div>
               <div class="col-md-6 social order-1 order-md-12">                
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-google-plus-g"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#" aria-label="Ir a Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" aria-label="Ir a Twitter"><i class="fab fa-twitter"></i></a>
+                <a href="#" aria-label="Ir a Linkedin"><i class="fab fa-linkedin-in"></i></a>
               </div>
             </div>
           </div>
