--- a/index.html
+++ b/index.html
@@ -561,9 +561,9 @@
                 <p>&copy; 2023 Derechos reservados. Creada por <a href="https://www.webdomus.net/" class="created-by">Web Domus Italia y María José Ávila Amezcua</a></p>
               </div>
               <div class="col-md-6 social order-1 order-md-12">                
-                <a href="#" aria-label="Ir a Facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" aria-label="Ir a Twitter"><i class="fab fa-twitter"></i></a>
-                <a href="#" aria-label="Ir a Linkedin"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.facebook.com/" aria-label="Ir a Facebook"><em class="fab fa-facebook-f"></em></a>
+                <a href="https://twitter.com/?lang=es" aria-label="Ir a Twitter"><em class="fab fa-twitter"></em></a>
+                <a href="https://www.linkedin.com/" aria-label="Ir a Linkedin"><em class="fab fa-linkedin-in"></em></a>
               </div>
             </div>
           </div>
